--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Joined probability $P(T,\\{i,j\\})$ for $\\{i,j\\}=$</th>\n",
+       "      <th>Joined PMF $P(T,\\{i,j\\})$ for $\\{i,j\\}=$</th>\n",
        "      <th>[1,1]</th>\n",
        "      <th>[2,2]</th>\n",
        "      <th>[3,3]</th>\n",
@@ -709,11 +709,11 @@
        "</div>"
       ],
       "text/plain": [
-       "  row index Joined probability $P(T,\\{i,j\\})$ for $\\{i,j\\}=$   [1,1]   [2,2]  \\\n",
-       "0                                                             (1/18)  (1/18)   \n",
+       "  row index Joined PMF $P(T,\\{i,j\\})$ for $\\{i,j\\}=$   [1,1]   [2,2]   [3,3]  \\\n",
+       "0                                                     (1/18)  (1/18)  (1/18)   \n",
        "\n",
-       "    [3,3]   [1,2]   [2,1]   [1,3]   [3,1]   [2,3]   [3,2]  \n",
-       "0  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  "
+       "    [1,2]   [2,1]   [1,3]   [3,1]   [2,3]   [3,2]  \n",
+       "0  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  "
       ]
      },
      "metadata": {},
@@ -741,7 +741,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Joint probability $P(H,i)$ for $i =$</th>\n",
+       "      <th>Joint PMF $P(H,i)$ for $i =$</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
@@ -761,8 +761,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  row index Joint probability $P(H,i)$ for $i =$      1      2      3\n",
-       "0                                                 (1/6)  (1/6)  (1/6)"
+       "  row index Joint PMF $P(H,i)$ for $i =$      1      2      3\n",
+       "0                                         (1/6)  (1/6)  (1/6)"
       ]
      },
      "metadata": {},
@@ -797,7 +797,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Mariginal probability $P(T)$</th>\n",
+       "      <th>Mariginal PMF $P(T)$</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -811,8 +811,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  row index Mariginal probability $P(T)$\n",
-       "0                                 (9/18)"
+       "  row index Mariginal PMF $P(T)$\n",
+       "0                         (9/18)"
       ]
      },
      "metadata": {},
@@ -840,7 +840,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Mariginal probability $P(H)$</th>\n",
+       "      <th>Mariginal PMF $P(H)$</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -854,8 +854,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  row index Mariginal probability $P(H)$\n",
-       "0                                  (3/6)"
+       "  row index Mariginal PMF $P(H)$\n",
+       "0                          (3/6)"
       ]
      },
      "metadata": {},
@@ -883,7 +883,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Mariginal probability</th>\n",
+       "      <th>Mariginal PMF</th>\n",
        "      <th>P(#,1,#)</th>\n",
        "      <th>P(#,2,#)</th>\n",
        "      <th>P(#,3,#)</th>\n",
@@ -903,8 +903,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  row index Mariginal probability      P(#,1,#)      P(#,2,#)      P(#,3,#)\n",
-       "0                                  (1/6)+(3/18)  (1/6)+(3/18)  (1/6)+(3/18)"
+       "  row index Mariginal PMF      P(#,1,#)      P(#,2,#)      P(#,3,#)\n",
+       "0                          (1/6)+(3/18)  (1/6)+(3/18)  (1/6)+(3/18)"
       ]
      },
      "metadata": {},
@@ -915,7 +915,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "We calculate mariginal CDF's as cummulative sums of mariginal probabilities.\n",
+      "We calculate mariginal CMFs as cummulative sums of mariginal PMFs!\n",
       "\n"
      ]
     }
@@ -950,12 +950,12 @@
     "Dane_display_1= pd.DataFrame(Dane_1, columns=['row index','Mariginal PMF', 'P(#,1,#)','P(#,2,#)', 'P(#,3,#)'])\n",
     "display(Dane_display_1)\n",
     "\n",
-    "print(\"\\nWe calculate mariginal CDF's as cummulative sums of mariginal PMFs.\\n\")"
+    "print(\"\\nWe calculate mariginal CMFs as cummulative sums of mariginal PMFs!\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Joined probability $CMF(T,\\{i,j\\})$ for $\\{i,j\\}=$</th>\n",
+       "      <th>Mariginal CMF</th>\n",
+       "      <th>CMF(T,{i,j}) for $\\{i,j\\}=$</th>\n",
        "      <th>[1,1]</th>\n",
        "      <th>[2,2]</th>\n",
        "      <th>[3,3]</th>\n",
@@ -1004,26 +1005,27 @@
        "      <th>0</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
-       "      <td>(1/18)</td>\n",
+       "      <td>(2/18)</td>\n",
+       "      <td>(3/18)</td>\n",
+       "      <td>(4/18)</td>\n",
+       "      <td>(5/18)</td>\n",
+       "      <td>(6/18)</td>\n",
+       "      <td>(7/18)</td>\n",
+       "      <td>(8/18)</td>\n",
+       "      <td>(9/18)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  row index Joined probability $CMF(T,\\{i,j\\})$ for $\\{i,j\\}=$   [1,1]  \\\n",
-       "0                                                               (1/18)   \n",
+       "  row index Mariginal CMF CMF(T,{i,j}) for $\\{i,j\\}=$   [1,1]   [2,2]   [3,3]  \\\n",
+       "0                                                      (1/18)  (2/18)  (3/18)   \n",
        "\n",
-       "    [2,2]   [3,3]   [1,2]   [2,1]   [1,3]   [3,1]   [2,3]   [3,2]  \n",
-       "0  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  (1/18)  "
+       "    [1,2]   [2,1]   [1,3]   [3,1]   [2,3]   [3,2]  \n",
+       "0  (4/18)  (5/18)  (6/18)  (7/18)  (8/18)  (9/18)  "
       ]
      },
      "metadata": {},
@@ -1051,7 +1053,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Joint probability $CMF(H,i)$ for $i =$</th>\n",
+       "      <th>Mariginal CMF</th>\n",
+       "      <th>CMF(H,i) for $i =$</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
@@ -1062,17 +1065,18 @@
        "      <th>0</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>(1/6)</td>\n",
-       "      <td>(1/6)</td>\n",
-       "      <td>(1/6)</td>\n",
+       "      <td>(2/6)</td>\n",
+       "      <td>(3/6)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  row index Joint probability $CMF(H,i)$ for $i =$      1      2      3\n",
-       "0                                                   (1/6)  (1/6)  (1/6)"
+       "  row index Mariginal CMF CMF(H,i) for $i =$      1      2      3\n",
+       "0                                             (1/6)  (2/6)  (3/6)"
       ]
      },
      "metadata": {},
@@ -1107,13 +1111,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Mariginal probability $P(T)$</th>\n",
-       "      <th>$P(TUH)$</th>\n",
+       "      <th>Mariginal CMF</th>\n",
+       "      <th>P(T)</th>\n",
+       "      <th>P(TUH)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td>(9/18)</td>\n",
        "      <td>(3/6)+(9/18)</td>\n",
@@ -1123,8 +1129,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  row index Mariginal probability $P(T)$      $P(TUH)$\n",
-       "0                                 (9/18)  (3/6)+(9/18)"
+       "  row index Mariginal CMF    P(T)        P(TUH)\n",
+       "0                          (9/18)  (3/6)+(9/18)"
       ]
      },
      "metadata": {},
@@ -1152,7 +1158,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>row index</th>\n",
-       "      <th>Mariginal probability</th>\n",
+       "      <th>Mariginal</th>\n",
        "      <th>CMF(#,1,#)</th>\n",
        "      <th>CMF(#,2,#)</th>\n",
        "      <th>CMF(#,3,#)</th>\n",
@@ -1172,11 +1178,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  row index Mariginal probability    CMF(#,1,#)        CMF(#,2,#)  \\\n",
-       "0                                  (1/6)+(3/18)  2*(1/6)+2*(3/18)   \n",
-       "\n",
-       "         CMF(#,3,#)  \n",
-       "0  3*(1/6)+3*(3/18)  "
+       "  row index Mariginal    CMF(#,1,#)        CMF(#,2,#)        CMF(#,3,#)\n",
+       "0                      (1/6)+(3/18)  2*(1/6)+2*(3/18)  3*(1/6)+3*(3/18)"
       ]
      },
      "metadata": {},
@@ -1187,36 +1190,36 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "We calculate mariginal CDF's as cummulative sums of mariginal probabilities.\n",
+      "We calculate mariginal CMFs as cummulative sums of mariginal probabilities!\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print(\"Read joint CMF from the tables below.\")\n",
-    "Dane_T=np.array([[\"\",\"\",'(1/18)','(1/18)','(1/18)','(1/18)','(1/18)','(1/18)','(1/18)','(1/18)','(1/18)']])\n",
+    "Dane_T=np.array([[\"\",\"\",\"\",'(1/18)','(2/18)','(3/18)','(4/18)','(5/18)','(6/18)','(7/18)','(8/18)','(9/18)']])\n",
     "\n",
-    "Dane_display_T= pd.DataFrame(Dane_T,columns=['row index','Joined probability $CMF(T,\\{i,j\\})$ for $\\{i,j\\}=$','[1,1]','[2,2]','[3,3]','[1,2]','[2,1]','[1,3]','[3,1]','[2,3]','[3,2]'])\n",
+    "Dane_display_T= pd.DataFrame(Dane_T,columns=['row index','Mariginal CMF','CMF(T,{i,j}) for $\\{i,j\\}=$','[1,1]','[2,2]','[3,3]','[1,2]','[2,1]','[1,3]','[3,1]','[2,3]','[3,2]'])\n",
     "display(Dane_display_T)\n",
     "\n",
-    "Dane_H=np.array([[\"\",\"\",'(1/6)','(1/6)','(1/6)']])\n",
-    "Dane_display_H= pd.DataFrame(Dane_H,columns=['row index','Joint probability $CMF(H,i)$ for $i =$','1','2','3'])\n",
+    "Dane_H=np.array([[\"\",\"\",\"\",'(1/6)','(2/6)','(3/6)']])\n",
+    "Dane_display_H= pd.DataFrame(Dane_H,columns=['row index','Mariginal CMF','CMF(H,i) for $i =$','1','2','3'])\n",
     "display(Dane_display_H)\n",
     "\n",
     "print(\"Read mariginal CMF from the tables below.\")\n",
     "\n",
     "#Mariginal CMF: P(x=T), P(x= T or H)\n",
-    "Dane_HT=np.array([[\"\",'(9/18)','(3/6)+(9/18)']])\n",
-    "Dane_display_HT= pd.DataFrame(Dane_HT, columns=['row index','Mariginal probability $P(T)$', '$P(TUH)$'])\n",
+    "Dane_HT=np.array([[\"\",\"\",'(9/18)','(3/6)+(9/18)']])\n",
+    "Dane_display_HT= pd.DataFrame(Dane_HT, columns=['row index','Mariginal CMF','P(T)', 'P(TUH)'])\n",
     "display(Dane_display_HT)\n",
     "\n",
     "#Mariginal CMF: P(#,1,#), P(#,2,#), P(#,3,#)\n",
     "Dane_1=np.array([[\"\",\"\",'(1/6)+(3/18)','2*(1/6)+2*(3/18)','3*(1/6)+3*(3/18)']])\n",
     "\n",
-    "Dane_display_1= pd.DataFrame(Dane_1, columns=['row index','Mariginal probability', 'CMF(#,1,#)','CMF(#,2,#)', 'CMF(#,3,#)'])\n",
+    "Dane_display_1= pd.DataFrame(Dane_1, columns=['row index','Mariginal', 'CMF(#,1,#)','CMF(#,2,#)', 'CMF(#,3,#)'])\n",
     "display(Dane_display_1)\n",
     "\n",
-    "print(\"\\nWe calculate mariginal CDF's as cummulative sums of mariginal probabilities.\\n\")"
+    "print(\"\\nWe calculate mariginal CMFs as cummulative sums of mariginal probabilities!\\n\")"
    ]
   },
   {
