--- a/ML_2021_set2.ipynb
+++ b/ML_2021_set2.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>P(T,sum)</th>\n",
+       "      <th>PMF(T,sum)</th>\n",
        "      <td></td>\n",
        "      <td>0</td>\n",
        "      <td>1/18</td>\n",
@@ -697,7 +697,7 @@
        "      <td>1/18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>P(H,sum)</th>\n",
+       "      <th>PMF(H,sum)</th>\n",
        "      <td></td>\n",
        "      <td>1/6</td>\n",
        "      <td>1/6</td>\n",
@@ -707,7 +707,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mariginal P(T,sum)+P(H,sum)</th>\n",
+       "      <th>Mariginal PMF(T,sum)+PMF(H,sum)</th>\n",
        "      <td></td>\n",
        "      <td>1/6</td>\n",
        "      <td>2/9</td>\n",
@@ -717,7 +717,7 @@
        "      <td>1/18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mariginal P(H)</th>\n",
+       "      <th>Mariginal PMF(H)</th>\n",
        "      <td></td>\n",
        "      <td>9/18</td>\n",
        "      <td></td>\n",
@@ -727,7 +727,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mariginal P(T)</th>\n",
+       "      <th>Mariginal PMF(T)</th>\n",
        "      <td></td>\n",
        "      <td>3/6</td>\n",
        "      <td></td>\n",
@@ -741,12 +741,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                            sum =     1     2     3     4     5     6\n",
-       "P(T,sum)                              0  1/18  2/18  3/18  2/18  1/18\n",
-       "P(H,sum)                            1/6   1/6   1/6     0     0     0\n",
-       "Mariginal P(T,sum)+P(H,sum)         1/6   2/9  5/18  3/18  2/18  1/18\n",
-       "Mariginal P(H)                     9/18                              \n",
-       "Mariginal P(T)                      3/6                              "
+       "                                sum =     1     2     3     4     5     6\n",
+       "PMF(T,sum)                                0  1/18  2/18  3/18  2/18  1/18\n",
+       "PMF(H,sum)                              1/6   1/6   1/6     0     0     0\n",
+       "Mariginal PMF(T,sum)+PMF(H,sum)         1/6   2/9  5/18  3/18  2/18  1/18\n",
+       "Mariginal PMF(H)                       9/18                              \n",
+       "Mariginal PMF(T)                        3/6                              "
       ]
      },
      "metadata": {},
@@ -757,13 +757,13 @@
     "print(\"Read joint PMF from the tables below. Sum index denotes the sum of dices.\")\n",
     "Dane=np.array([[\"\",'0','1/18','2/18','3/18','2/18','1/18'],[\"\",'1/6','1/6','1/6','0','0','0'],[\"\",'1/6','2/9','5/18','3/18','2/18','1/18'],['','9/18','','','','',''],['','3/6','','','','','']])\n",
     " \n",
-    "Dane_display= pd.DataFrame(Dane,columns=['sum =','1','2','3','4','5','6'],index=['P(T,sum)','P(H,sum)','Mariginal P(T,sum)+P(H,sum)','Mariginal P(H)','Mariginal P(T)'])\n",
+    "Dane_display= pd.DataFrame(Dane,columns=['sum =','1','2','3','4','5','6'],index=['PMF(T,sum)','PMF(H,sum)','Mariginal PMF(T,sum)+PMF(H,sum)','Mariginal PMF(H)','Mariginal PMF(T)'])\n",
     "display(Dane_display)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -859,57 +859,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 307,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0.])"
-      ]
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a program that estimates the PMFs distributions.\n",
     "def PMF_2(Data):\n",
-    "    pmf=np.zeros(18)\n",
+    "    \n",
+    "    pmf_T=np.zeros(6)\n",
+    "    pmf_H=np.zeros(6)\n",
+    "    \n",
     "    for i in range(len(Data)):\n",
-    "        if Data[i][1]==[1]:\n",
-    "            pmf[0]=pmf[0]+1\n",
-    "        elif Data[i][1]=[2]:\n",
-    "            pmf[1]=pmf[1]+1 \n",
-    "        elif Data[i][1]=[3]:\n",
-    "            pmf[2]=pmf[2]+1    \n",
-    "        elif Data[i][]\n",
-    "    return pmf\n",
+    "        if Data[i][0]==1:\n",
+    "            pmf_H[Data[i][1]-1]=pmf_H[Data[i][1]-1]+1\n",
+    "        else:\n",
+    "            pmf_T[Data[i][1]-1]=pmf_T[Data[i][1]-1]+1\n",
+    "\n",
+    "    return [pmf_H, pmf_T]\n",
     "\n",
     "def roll(n):\n",
     "    outcome=[]\n",
     "    for i in range(n):\n",
-    "        outcome.append(np.random.choice(np.arange(1, 3)))\n",
-    "    return outcome\n",
+    "        outcome.append(np.random.choice(np.arange(1, 4)))\n",
+    "    return np.sum(np.array(outcome))\n",
     "\n",
     "def toss_roll(m):\n",
     "    result=[]\n",
     "    for i in range(m):\n",
     "        toss=np.random.choice(np.arange(1,3))\n",
     "        if toss==1:#head\n",
-    "            out=\"H\"\n",
+    "            out=toss\n",
     "            die_result=roll(2)\n",
     "        else:#tail \n",
-    "            out=\"T\"\n",
+    "            out=toss\n",
     "            die_result=roll(1)\n",
     "        result.append([out, die_result])\n",
     "    return result\n",
     "    \n",
-    "Dane=toss_roll(10)\n",
+    "Data=toss_roll(20)\n",
     "\n",
-    "PMF_2(Dane)"
+    "PMF_H=PMF_2(Data)[0]\n",
+    "PMF_T=PMF_2(Data)[1]\n",
+    "\n",
+    "CDF_H = np.cumsum(PMF_H)\n",
+    "CDF_T = np.cumsum(PMF_T)\n",
+    "summ  =  np.arange(1,6)\n",
+    "\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2,figsize=(9, 4))\n",
+    "ax1.set_title(\"PMF PLOT\")\n",
+    "ax1.set_xlabel(\"X(E)\")\n",
+    "ax1.set_ylabel(\"Probability_density(x=X(E))\")\n",
+    "ax1.set_xticks(np.arange(0, 2.1, step=1))\n",
+    "ax1.vlines(XE, 0, pmf, colors='r', linestyles='-', lw=2)\n",
+    "ax1.plot(XE, pmf, 'ro', ms=3, mec='r')\n",
+    "\n",
+    "ax2.set_title(\"CDF PLOT\")\n",
+    "ax2.set_xlabel(\"X(E)\")\n",
+    "ax2.set_ylabel(\"Probability_density(x<X(E))\")\n",
+    "ax2.set_xticks(np.arange(0, 2.1, step=1))\n",
+    "ax2.vlines(XE, 0, cdf, colors='r', linestyles='-', lw=2)\n",
+    "ax2.plot(XE, cdf, 'ro', ms=3, mec='r')\n",
+    "plt.show()"
    ]
   },
   {
