--- a/assignment_till_20.11.ipynb
+++ b/assignment_till_20.11.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solutions to Modern Data Science Problems (probelms till 27.11)\n",
+    "# Solutions to Modern Data Science Problems (problems till 20.11)\n",
     "by *Nora Salone* "
    ]
   },
@@ -84,11 +84,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$Var[X]$$=E[(X-E(X))^2]\\\\\n",
+    "       =E[X^2-2XE[X]+E[X]^2]\\\\\n",
+    "       =E[X^2]-2E[X]E[X]+E[X]^2\\\\\n",
+    "       =E[X^2]-E[X]^2$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,11 +229,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$Cov(X,Y)$$=E[(X-E[X])(Y-E[Y])]\\\\\n",
+    "         =E[XY-XE[Y]-E[X]Y+E[X]E[Y]\\\\\n",
+    "         =E[XY]-E[X]E[Y]-E[X]E[Y]+E[X]E[Y]\\\\\n",
+    "         =E[XY]-E[X]E[Y]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$Var(X+Y)$$=E[(X+Y)^2]-E[X+Y]^2\\\\\n",
+    "          =E[X^2]+2E[XY]+E[Y^2]-(E[X]+E[Y])^2\\\\\n",
+    "          =E[X^2]+2E[XY]+E[Y^2]-E[X]^2-2E[X]E[Y]-E[Y]^2\\\\\n",
+    "          =Var[X]+Var[Y]+2E[XY]-2E[X]E[Y]\\\\\n",
+    "          =Var[X]+Var[Y]+2Cov(X,Y)$"
+   ]
   },
   {
    "cell_type": "markdown",
