Corrected some other mistakes about PMF

--- a/assignment_till_20.11.ipynb
+++ b/assignment_till_20.11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "dfffdg"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -150,17 +152,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Number of die, x value, y value]\n",
-      "[[5, 0, 1], [6, 1, 0], [1, 0, 0], [5, 0, 1], [6, 1, 0], [5, 0, 1], [1, 0, 0], [6, 1, 0], [2, 1, 0], [1, 0, 0]]\n"
+      "[[1, 0, 0], [2, 1, 1], [3, 0, 1], [4, 1, 0], [5, 0, 1], [6, 1, 0]]\n",
+      "pmfE= [1 1 1]\n",
+      "pmfP= [1 1 1]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([0.125, 0.   , 0.375]), array([0. , 0. , 0.5])]"
+       "[array([0.16666667, 0.16666667, 0.16666667]),\n",
+       " array([0.16666667, 0.16666667, 0.16666667])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,19 +198,24 @@
     "                else:\n",
     "                    yval=1 #even if die has modulus !=0 for some i's, set yval=1; if there is even one i with modulus ==0, overwrite yval=1\n",
     "        else:\n",
-    "            yval=0 #die=1 is not prime\n",
+    "            if die==1:\n",
+    "                yval=0 #die=1 is not prime\n",
+    "            elif die==2:\n",
+    "                yval=1 #die 2 is prime\n",
     "        data.append([die,xval,yval])#1 for even, 0 for odd\n",
     "    print(\"[Number of die, x value, y value]\")\n",
     "    return data\n",
     "\n",
     "flips=10\n",
-    "data=assign_prob(flips)\n",
+    "#data=assign_prob(flips)\n",
+    "data=[[1,0,0],[2,1,1],[3,0,1],[4,1,0],[5,0,1],[6,1,0]]\n",
     "print(data)\n",
     "\n",
     "def joint_PMF(data):\n",
     "    pmfE=np.array([0]*3) #even number\n",
     "    pmfP=np.array([0]*3) #prime number\n",
     "    for i in range(len(data)):\n",
+    "        #print(\"i=\",i,\"data[i][0]=\",data[i][0],\"data[i][1]=\",data[i][1],\"data[i][2]=\",data[i][2])\n",
     "        if data[i][1]==1:  #outcome: even \n",
     "            if data[i][0]==2:\n",
     "                pmfE[0] += 1\n",
@@ -214,30 +223,20 @@
     "                pmfE[1] += 1\n",
     "            elif data[i][0]==6:\n",
     "                pmfE[2] += 1\n",
-    "        elif data[i][2]==1:  #outcome: prime\n",
+    "        if data[i][2]==1:  #outcome: prime\n",
     "            if data[i][0]==2:\n",
     "                pmfP[0] += 1\n",
     "            elif data[i][0]==3:\n",
     "                pmfP[1] += 1\n",
     "            elif data[i][0]==5:\n",
     "                pmfP[2] += 1\n",
-    "    pmfE=pmfE/np.sum(pmfE)*1/2 #1/2 bc of original choice odd or even, 6 possible die outcomes\n",
-    "    pmfP=pmfP/np.sum(pmfP)*1/2 #3 possible prime numers\n",
+    "    print(\"pmfE=\",pmfE)\n",
+    "    print(\"pmfP=\",pmfP)\n",
+    "    pmfE=pmfE/6 #6 possible die outcomes in both cases\n",
+    "    pmfP=pmfP/6 \n",
     "    return [pmfE,pmfP]\n",
     "\n",
     "joint_PMF(data)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The marginal probability distribution of a random variable is its individual probability distribution, in this case\n",
-    "\n",
-    "$$P(X)=3/6=1/2\\quad {\\text{for}}\\quad X\\in \\{0,1\\}\\\\\n",
-    "P(Y)=3/6=1/2\\quad {\\text{for}}\\quad Y\\in \\{0,1\\}$$\n",
-    "\n",
-    "The joint probability mass function of $X$ and $Y$ defines probabilities for each pair of outcomes. All possible outcomes are"
    ]
   },
   {
@@ -321,10 +320,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P(X=0,Y=0)=P\\{1\\}=1/6\\\\\n",
-    "P(X=0,Y=1)=P\\{2\\}=2/6=1/3\\\\\n",
-    "P(X=1,Y=0)=P\\{2\\}=1/3\\\\\n",
-    "P(X=1,Y=1)=P\\{1\\}=1/6$$\n"
+    "The joint probability mass function PMF of $X$ and $Y$ defines probabilities for each pair of outcomes. All possible outcomes are\n",
+    "\n",
+    "$$p_{XY}(0,0)=1/6\\\\\n",
+    "p_{XY}(0,1)=2/6=1/3\\\\\n",
+    "p_{XY}(1,0)=2/6=1/3\\\\\n",
+    "p_{XY}(1,1)=1/6$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The marginal probability distribution of the random variable $X$ is the sum of the joint PMF values over the values of r:\n",
+    "\n",
+    "$$p_X(k)=\\sum_r p_{XY}(k,r)$$\n",
+    "\n",
+    "whereas for $Y$ one sums over $k$\n",
+    "\n",
+    "$$p_Y(k)=\\sum_k p_{XY}(k,r)$$\n",
+    "\n",
+    "In this case:\n",
+    "$$p_X(0)=\\sum_r p_{XY}(0,r)= p_{XY}(0,0) + p_{XY}(0,1) = \\frac{1}{6}+\\frac{2}{6}=\\frac{1}{2}\\\\\n",
+    "p_X(1)=\\sum_r p_{XY}(1,r)= p_{XY}(1,0) + p_{XY}(1,1) = \\frac{2}{6}+\\frac{1}{6}=\\frac{1}{2}$$\n",
+    "\n",
+    "which is compatible with \n",
+    "\n",
+    "$$\\sum_k p_X(k)=1$$\n",
+    "\n",
+    "The same goes for $p_Y(r)$:\n",
+    "\n",
+    "$$p_Y(0)=\\sum_k p_{XY}(k,0)= p_{XY}(0,0) + p_{XY}(1,0) = \\frac{1}{6}+\\frac{2}{6}=\\frac{1}{2}\\\\\n",
+    "p_Y(1)=\\sum_k p_{XY}(k,1)= p_{XY}(0,1) + p_{XY}(1,1) = \\frac{2}{6}+\\frac{1}{6}=\\frac{1}{2}$$\n",
+    "\n",
+    "which is compatible with \n",
+    "\n",
+    "$$\\sum_r p_Y(r)=1$$."
    ]
   },
   {
@@ -332,13 +363,13 @@
    "metadata": {},
    "source": [
     "The conditional PMF is \n",
-    "$$p_{Y|X}[r|1]=\\frac{p_{XY}(1,r)}{p_X(1)}=\\frac{P(X=1,Y=r)}{P(X=1)}$$\n",
+    "$$p_{Y|X}[r|1]=\\frac{p_{XY}(1,r)}{p_X(1)}$$\n",
     "which in this case means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -385,13 +416,6 @@
        "      <td>2/3</td>\n",
        "      <td>2/3</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>$$p_{Y|X}[r|0]$$</th>\n",
-       "      <td></td>\n",
-       "      <td>2/3</td>\n",
-       "      <td>1/3</td>\n",
-       "      <td>1/3</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -399,8 +423,7 @@
       "text/plain": [
        "                 die =    2    4    6\n",
        "Y=r                       1    0    0\n",
-       "$$p_{Y|X}[r|1]$$        1/3  2/3  2/3\n",
-       "$$p_{Y|X}[r|0]$$        2/3  1/3  1/3"
+       "$$p_{Y|X}[r|1]$$        1/3  2/3  2/3"
       ]
      },
      "metadata": {},
@@ -408,9 +431,9 @@
     }
    ],
    "source": [
-    "Dane=np.array([[\"\",'1','0','0'],[\"\",'1/3','2/3','2/3'],[\"\",'2/3','1/3','1/3']])\n",
+    "Dane=np.array([[\"\",'1','0','0'],[\"\",'1/3','2/3','2/3']])\n",
     " \n",
-    "Dane_display= pd.DataFrame(Dane,columns=['die =','2','4','6'],index=['Y=r','$$p_{Y|X}[r|1]$$','$$p_{Y|X}[r|0]$$'])\n",
+    "Dane_display= pd.DataFrame(Dane,columns=['die =','2','4','6'],index=['Y=r','$$p_{Y|X}[r|1]$$'])\n",
     "display(Dane_display)"
    ]
   },
@@ -418,8 +441,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$p_{Y|X}[r|k]$ is a proper probability function if\n",
-    "$$\\sum_r p_{Y|X}[r|k]=1$$ for all $k$. We have the above-mentioned case $X=1$, where $\\sum_r p_{Y|X}[r|k]=1/3+2/3=1$, and the $X=0$ case, where $\\sum_r p_{Y|X}[r|1]=1/3+2/3=1$, so $p_{Y|X}[r|0]$ is a proper probability function."
+    "$h(x)=p_{Y|X}[r|k]$ is a proper probability function if\n",
+    "$$\\sum_k p_{Y|X}(r|k)=1$$ for all $k$. We have\n",
+    "\n",
+    "$$\\sum_k p_{Y|X}[r|k]=p_{Y|X}[r|0]+p_{Y|X}[r|1]=\\frac{p_{XY}(0,r)}{p_X(0)}+\\frac{p_{XY}(1,r)}{p_X(1)}$$\n",
+    "\n",
+    "We have the above-mentioned case $X=1$, where $\\sum_r p_{Y|X}(r|k)=1/3+2/3=1$, and the $X=0$ case, where $\\sum_r p_{Y|X}(r|1)=1/3+2/3=1$, so $p_{Y|X}(r|0)$ is a proper probability function."
    ]
   },
   {
@@ -542,13 +569,6 @@
     "$$Var[Y|0]=\\sum_r (r-E[Y|0])^2 p_{Y|X}[r|0]=E[Y|0]^2 p_{Y|X}[0|0]+(1-E[Y|0])^2 p_{Y|X}[0|1]=\\\\\n",
     "=\\frac{4}{9}\\frac{1}{3}+\\frac{1}{9}\\frac{2}{3}=\\frac{2}{9}$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
